--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "jogo-faculdade",
+  "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "bycontract": "^2.0.11",
     "prompt-sync": "^4.2.0"
